# faceDetectionTask

./: README.md
Project/: CMakeLists.txt  README.md  main.cpp
Project/facedetect/: CMakeLists.txt  facedetect.pc  facedetect.pc.in
Project/facedetect/include/: facedetect.h
Project/facedetect/src/: facedetect.cpp
